2013-12-22  Erik Olofsen  <olofsen@users.sf.net>

	* configure.vms src/command.c src/hidden3d.c src/stdfn.c src/stdfn.h
	src/syscfg.h src/term.c src/term.h term/tek.trm:

	Update VMS build support. Tested using HP C V7.1-015 OpenVMS Alpha V8.3
	on an AlphaServer DS10.

2013-12-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/Makefile.am: automake 1.14 wants an option subdir-objects
	* src/set.c (set_zeroaxis): memory leak
	* src/unset.c (unset_histogram): memory leak
	* src/parse.c (next_iteration): survive clobbered iteration variable
	  Bug #1312

2013-12-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c src/graph3d.c src/show.c src/set.c src/unset.c
	src/save.c:  Reduce size of the AXIS structure.

2013-12-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/gp_hist.h src/history.c src/plot.c src/set.c
	src/show.c src/tables.c src/tables.h src/unset.c docs/gnuplot.doc:

	New command `set history` to control history output
	Syntax:
	    set history {size <N>} {quiet|numbers} {full|trim} {default}

	set history size N	replaces "set historysize N"
	set history size -1	replaces "unset historysize"
	set history quiet	subsequent `history` commands will not show numbers
	set history numbers	subsequent `history` commands will show numbers
	set history trim	[old default] remove duplicate history entries
	set history full	do not alter list by removing old duplicate entries
	set history default	equivalent to "set history size 500, numbers, trim"

2013-12-15  Jyrki Yli-Nokari  <jyrkiylinokari@gmail.com>

	* src/bitmap.c configure.in:
	Jyrki Yli-Nokari, the original author of the code in bitmap.c,
	has agreed to relicense it as dual license (gnuplot + BSD).
	This removes a restriction to non-commercial use imposed by the
	license terms that appeared in earlier versions of file bitmap.c.

2013-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/history.c src/gp_hist.h docs/gnuplot.doc: